<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/uv_signin_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/uv_email_address"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/uv_signin_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/uv_display_name"
        android:inputType="textNoSuggestions|textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/uv_signin_password_fields" >

        <EditText
            android:id="@+id/uv_signin_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/uv_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/uv_signin_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/uv_forgot_password"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>
