<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/uv_comment_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="60dp"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/uv_comment_hint"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:id="@+id/uv_email"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <include layout="@layout/uv_header_item_light_no_padding" />

            <EditText
                android:id="@+id/uv_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/uv_email_address"
                android:inputType="textEmailAddress"
                android:ems="10"></EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/uv_name"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <include layout="@layout/uv_header_item_light_no_padding" />

            <EditText
                android:id="@+id/uv_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/uv_name_hint"
                android:ems="10"></EditText>
        </LinearLayout>

    </LinearLayout>
</ScrollView>